--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -1,33 +1,88 @@
-<footer style="background-color: #eeeeee;">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 text-left">
-        <span class="copyright">Copyright &copy; CIOC FMCG Pvt Ltd 2017</span>
-      </div>
-      <div class="col-md-6 text-right">
-        <ul class="list-inline quicklinks">
-          <li><a href="/policy">Privacy Policy</a>
-          </li>
-          <li><a href="/terms">Terms of Use</a>
-          </li>
-          <li><a href="/refund">Refund and Cancellation Policy </a>
-          </li>
-        </ul>
+<footer style="padding:20px;background-color:#080738;color:white;">
+  <div style="padding-left:10%;padding-right:10%">
+    <div class="row" style="margin-bottom:20px;">
+      <h1><i class="fa fa-contao " aria-hidden="true"></i>IOC</h1>
+      <div class="col-md-12">
+        <div class="col-md-3 footer">
+          <ul class="list-unstyled">
+            <h4 class="text-muted">Product Features & Benefits</h4>
+            <li> <a href="#">Products</a></li>
+            <li> <a href="#"> Plans</a></li>
+            <li> <a href="#"> Developers</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 footer">
+          <ul class="list-unstyled">
+            <h4 class="text-muted">Solutions</h4>
+            <li> <a href="#">Marketing Teams </a></li>
+            <li> <a href="#">Product Teams</a></li>
+            <li> <a href="#">Retail</a></li>
+            <li> <a href="#">Travel</a></li>
+            <li> <a href="#">High Tech</a></li>
+            <li> <a href="#">Finance</a></li>
+            <li> <a href="#">Media</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 footer">
+          <ul class="list-unstyled">
+            <h4 class="text-muted"> Customers</h4>
+            <li> <a href="#">Case Studies</a></li>
+            <li> <a href="#">Solutions Partners</a></li>
+            <li> <a href="#">Technology Partners</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 footer">
+          <ul class="list-unstyled">
+            <h4 class="text-muted"> Resources</h4>
+            <li> <a href="#">Resource Library</a></li>
+            <li> <a href="#">Blog</a></li>
+            <li> <a href="#">Optimization Glossary</a></li>
+            <li> <a href="#">Sample Size Calculator</a></li>
+            <li> <a href="#">Events</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 footer">
+          <ul class="list-unstyled">
+            <h4 class="text-muted"> About</h4>
+            <li> <a href="#">About</a></li>
+            <li> <a href="#">Careers</a></li>
+            <li> <a href="#">Press</a></li>
+            <li> <a href="#">Nonprofits</a></li>
+            <li> <a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-1 footer">
+          <ul class="list-unstyled">
+            <h4 class="text-muted"> Other</h4>
+            <li> <a href="#">Platform Status</a></li>
+            <li> <a href="#">Customer Success</a></li>
+            <li> <a href="#">Knowledge Base</a></li>
+            <li> <a href="#">Academy</a></li>
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <ul class="list-inline social-buttons">
-          <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a>
-          </li>
-          <li class="instagram"><a href="#"><i class="fa fa-instagram"></i></a>
-          </li>
-          <li class="youtube"><a href="#"><i class="fa fa-youtube-play"></i></a>
-          </li>
-          <li class="google"><a href="#"><i class="fa fa-google-plus"></i></a>
-          </li>
+    <!-- <div class="row">
+      <ul class="list-unstyled">
+        <li>English</li>
+        <li>German</li>
+      </ul>
+    </div> -->
+    <div class="row" style="border-top:1px solid grey;">
+      <div class="col-md-12" style="margin:5px;">
+        <ul class="list-inline terms">
+          <li style="border-right:0px">© 2018 CIOC. All Rights Reserved.</li>
+          <li>Terms of Service </li>
+          <li>Trademark Policy </li>
+          <li>Privacy Policy </li>
+          <li>Security </li>
+          <li style="border-right:0px">Compliance </li>
+          <ul class="list-inline  pull-right">
+            <li><a href=""></a><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></li>
+            <li><a href=""></a><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></li>
+            <li><a href=""></a><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></li>
+            <li><a href=""></a><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></li>
+          </ul>
         </ul>
       </div>
     </div>
