--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -2,7 +2,7 @@
 <title>CIOC</title>
 <base href="/">
 {% endblock %} {% block specific_css %}
-<!-- <link href="{% static 'css/agency.css' %}" rel="stylesheet"> -->
+<link href="{% static 'css/homepage.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %} {% include "header.html" %} {% endblock %}
 <!-- Header -->
 
@@ -19,7 +19,7 @@
     }
 
   }
-  
+
 </style>
 
 
