--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -236,6 +236,17 @@
       var wampBindName = "{{user.username}}";
       var webRtcAddress = '{{webRtcAddress}}'
       var BRAND_LOGO = "{{BRAND_LOGO}}";
+      var appps;
+      var xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+          if (this.readyState == 4 && this.status == 200) {
+            var data = JSON.parse(this.responseText)
+            console.log(data,'777777777777777');
+            appps=data
+          }
+        }
+        xhttp.open('GET', '/api/ERP/application/' , true);
+        xhttp.send();
     </script>
     <script src="{% static 'js/custom/wampProcessors.js' %}"></script>
     <script src="{% static 'js/custom/nativeJS.js' %}"></script>
