--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -23,3 +23,22 @@
   font-size: 12px;
 	padding-right: 15px;
 }
+
+.section {
+  /* border: 2px solid black; */
+}
+
+.mainSection {
+  /* border: 2px solid black; */
+  background-color: #e9e9e9
+  margin-right:20px;
+  border-radius: 10px;
+}
+
+.noPadding{
+  padding:0px;
+}
+
+.shaddowed{
+  box-shadow: 0px 2px 8px rgba(26, 24, 20, 0.2);
+}
