--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -23,10 +23,7 @@
       </div>
 
 
-
-
-
-      <!-- <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">
         <li>
           {% if home %}
           <a class="" href="#services"> <i class="fa fa-check"></i> Services</a>
@@ -70,7 +67,7 @@
         </li>
 
 
-      </ul> -->
+      </ul>
     </div>
   </div>
 </nav>
