--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -2,13 +2,7 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header ">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/" style="color:rgb(0, 133, 202);">CIOC</a>
+      <a class="navbar-brand" href="/" style="color:rgb(0, 133, 202);padding:0px;font-size:20px;padding-top:15px;">CIOC</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div class="col-md-4" >
