--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -26,6 +26,45 @@
 
 
 
+      <ul class="nav navbar-nav header_nav">
+        <li class="header_element">
+          <a href="/" ng-mouseleave="show[0]=false" ng-mouseover="show[0]=true"> Contact</a>
+          <ul ng-mouseleave="keepshow[0]=false" ng-mouseover="keepshow[0]=true" ng-show="show[0]||keepshow[0]" class="container_box">
+          <li><a href="#">Page 1-1</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
+          </ul>
+        </li>
+        <li class="header_element">
+          <a href="/" ng-mouseleave="show[1]=false" ng-mouseover="show[1]=true"> Contact</a>
+          <ul ng-mouseleave="keepshow[1]=false" ng-mouseover="keepshow[1]=true" ng-show="show[1]||keepshow[1]" class="container_box">
+          <li><a href="#">Page 1-1</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
+          </ul>
+        </li>
+        <li class="header_element">
+          <a href="/" ng-mouseleave="show[2]=false" ng-mouseover="show[2]=true"> Contact</a>
+          <ul ng-mouseleave="keepshow[2]=false" ng-mouseover="keepshow[2]=true" ng-show="show[2]||keepshow[2]" class="container_box">
+          <li><a href="#">Page 1-1 Page 1-1</a></li>
+          <li><a href="#">Page 1-2 Page 1-1</a></li>
+          <li><a href="#">Page 1-3 Page 1-1</a></li>
+          </ul>
+        </li>
+        <li class="header_element">
+          <a href="/" ng-mouseleave="show[3]=false" ng-mouseover="show[3]=true"> Contact</a>
+            <ul ng-mouseleave="keepshow[3]=false" ng-mouseover="keepshow[3]=true" ng-show="show[3]||keepshow[3]" class="container_box">
+          <li><a href="#">Page 1-1</a></li>
+          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Page 1-3</a></li>
+          </ul>
+        </li>
+        <li>
+          <button type="button" class="btn btn-warning" style="background-color:#ff6900;margin-top:10px;">
+            Request Demo
+          </button>
+        </li>
+      </ul>
       <!-- <ul class="nav navbar-nav navbar-right">
         <li>
           {% if home %}
@@ -68,8 +107,6 @@
             Request Demo
           </button>
         </li>
-
-
       </ul> -->
     </div>
   </div>
