--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -1,14 +1,14 @@
 {% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 
-{% verbatim %}
-
-<div class="row" style=" background:url('/static/images/1.jpg') no-repeat right bottom;height:65vh;margin:0px;">
+<div class="row" style=" background:url('/static/images/mainBanner.{{LANGUAGE_CODE}}.jpg') no-repeat right bottom;height:65vh;margin:0px;">
   <img src="/static/images/image10.png" style="width:100%;height:100%" alt="">
   <div style="position:absolute;top:200px;left:100px;width:30vw;">
-    <h3 style="color:white;"> {% endverbatim %} {% trans 'WelcomeHeading' %}  {% verbatim %} </h3>
+    <h3 style="color:white;">{% trans 'WelcomeHeading' %}  {% verbatim %} </h3>
   </div>
 </div>
 
+{% verbatim %}
 <div class="row" style="margin:0px;">
   <div class="col-md-8 col-md-offset-2" >
     <div class="col-md-12" >
