--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -4,7 +4,7 @@
 <div class="row" style=" background:url('/static/images/mainBanner.{{LANGUAGE_CODE}}.jpg') no-repeat right bottom;height:65vh;margin:0px;">
   <img src="/static/images/image10.png" style="width:100%;height:100%" alt="">
   <div style="position:absolute;top:200px;left:100px;width:30vw;">
-    <h3 style="color:white;">{% trans 'WelcomeHeading' %}  {% verbatim %} </h3>
+    <h3 style="color:white;">{% trans 'WelcomeHeading' %} </h3>
   </div>
 </div>
 
