--- a/support/templates/app.scriptEmail.html
+++ b/support/templates/app.scriptEmail.html
@@ -129,7 +129,7 @@
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td class="esd-block-text es-m-txt-c es-p5" align="left">
-                                                                                        <h4 style="line-height: 150%;color:#24578e">Copy and Paste the script in your main html file's body section</h4>
+                                                                                        <h4 style="line-height: 150%;color:#24578e">Copy and Paste the script in your main html file's body section as shown below</h4>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
@@ -157,9 +157,10 @@
                                                                                       <p style="margin:3px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;<span style="color:#800000;">title</span>&gt;&lt;/<span style="color:#800000;">title</span>&gt;</p>
                                                                                       <p style="margin:3px">&nbsp;&nbsp; &lt;/<span style="color:#800000;">head</span>&gt;</p>
                                                                                       <p style="margin:3px">&nbsp;&nbsp; &lt;<span style="color:#800000;">body</span>&gt;<br></p>
-                                                                                      <p style="color:#006400">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{script}}<br></p>
+
                                                                                       <p >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:#000000;"> .........</span></p>
                                                                                       <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:#000000;"> .........</span></p>
+                                                                                      <p style="color:#006400">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{script}}<br></p>
                                                                                       <p style="margin:3px">&nbsp;&nbsp; &lt;/<span style="color:#800000;">body</span>&gt;</p>
                                                                                       <p style="margin:3px">&lt;/<span style="color:#800000;">html</span>&gt;</p>
                                                                                   </td>
