--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -43,7 +43,7 @@
           <li>Privacy Policy </li>
           <li>Security </li>
           <li style="border-right:0px">Compliance </li>
-          <ul class="list-inline  pull-right">
+          <ul class="list-inline social pull-right">
             <li><a href=""></a><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></li>
             <li><a href=""></a><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></li>
             <li><a href=""></a><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></li>
