--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{% static 'css/rzslider.min.css' %}" charset="utf-8">
 <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}" charset="utf-8">
 <link href="{% static 'css/homepage.css' %}" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% endblock %} {% block header %} {% include "header.html" %} {% endblock %}
 <!-- Header -->
 
