--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -1,6 +1,7 @@
 .lang {
   text-decoration: none;
 }
+
 .footer h4 {
   color: #928ec9;
   font-weight: bold;
@@ -9,95 +10,286 @@
 }
 
 .footer a {
-	color: #ccc;
-	font-size: 12px;
+  color: #ccc;
+  font-size: 12px;
 }
+
 .footer a:hover {
   color: #ffc107;
   text-decoration: none;
 }
 
-.terms > li {
+.terms>li {
   border-right: 1px solid #fff;
   color: #ccc;
   font-size: 12px;
-	padding-right: 15px;
+  padding-right: 15px;
 }
 
+/* .social > ul {
+} */
 /* .header_nav > li> a:hover{
   border-bottom: 2px solid red;
 
 } */
-.header_element{
+.header_element {
   position: relative;
 }
-.container_box{
+
+.container_box {
   position: absolute;
-  top:40px;
+  top: 40px;
   left: 10px;
   padding: 0px;
   background-color: #fff;
-  box-shadow: 1px 1px 8px 0 rgba(8,19,31,.25);
+  box-shadow: 1px 1px 8px 0 rgba(8, 19, 31, .25);
   margin: 2px;
   display: flex;
   width: 180%;
   flex-direction: column;
   justify-content: center;
 }
-.container_box > li{
+
+.container_box>li {
   list-style: none;
   padding: 10px;
   text-decoration: none;
   border-left: 4px solid #fff;
   cursor: pointer;
-
 }
-.container_box > li >a{
-  color:black;
+
+.container_box>li>a {
+  color: black;
   display: block;
   text-decoration: none;
   font-weight: 501;
 }
-.container_box > li:hover{
 
+.container_box>li:hover {
   background-color: #0085ca;
   color: #fff !important;
   border-left: 4px solid #ff6900;
-
 }
-.container_box> li:hover a{
+
+.container_box>li:hover a {
   color: #fff !important;
 }
 
-.header_nav > li> a{
+.header_nav>li>a {
   font-weight: 501;
   margin-left: 20px;
 }
 
-.noPadding{
-  padding:0px;
+.noPadding {
+  padding: 0px;
 }
 
-.shaddowed{
+.shaddowed {
   box-shadow: 0px 1px 4px rgba(26, 24, 20, 0.2);
 }
 
-.btn-primary{
-  background:white;
-  color:#080738;
-  border:solid 1px #0773ab;
+.btn-primary {
+  background: white;
+  color: #080738;
+  border: solid 1px #0773ab;
 }
 
-.btn-primary:hover{
-  background:#0773ab;
+.btn-primary:hover {
+  background: #0773ab;
   color: #fff;
-  border:solid 1px #0773ab;
+  border: solid 1px #0773ab;
 }
 
-.btn-warning{
+.btn-warning {
   background-color: #ff6900;
-  border:solid 1px #ff6900;
+  border: solid 1px #ff6900;
 }
-.btn-warning:hover{
+
+.btn-warning:hover {
   background-color: #ff6900;
+}
+
+.point-green {
+  content: "";
+  display: inline-block;
+  vertical-align: top;
+  width: 25px;
+  height: 25px;
+  background-color: #fff;
+  border-radius: 100%;
+  border: 5px solid #00ff8c;
+  position: absolute;
+  top: 70px;
+  left: 10px
+}
+
+.scroll-point {
+  content: "";
+  display: inline-block;
+  vertical-align: top;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 100%;
+  border: 6px solid #0037ff;
+}
+
+.point-text {
+  color: #0037ff;
+  font-weight: bold;
+  vertical-align: top;
+}
+
+.curve {
+  left: 5px;
+}
+
+blockquote {
+  background-color: #f2f2f5;
+  border-radius: 15px;
+  margin: 0 0 1rem 0;
+  box-sizing: border-box;
+  color: #080738;
+}
+
+blockquote>h6 {
+  font-weight: bold;
+  font-size: 14px;
+}
+
+blockquote>p {
+  font-size: 14px;
+}
+
+.marketing {
+  padding-left: 200px;
+  padding-right: 200px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  flex: 1;
+}
+
+.content {
+  max-width: 350px;
+  color: #262e45;
+  font: 400 16px/1.5 NBI Pro Regular, Helvetica Neue, Helvetica, Open Sans, Arial, sans-serif;
+  text-align: left;
+  font-weight: strong;
+}
+
+.content h3 {
+  margin-bottom: 20px;
+  color: #080738;
+  /* font-family: Arial Bold; */
+  /* font-size: 1.75rem; */
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.btn-rounded {
+  border-radius: 40px;
+  white-space: nowrap;
+  text-transform: uppercase;
+  background: #0037ff;
+  color: #fff;
+}
+
+.btn-rounded:hover {
+  background: #0066ff;
+  color: #fff;
+  border: solid 1px #0066ff;
+}
+
+.text-uppercase {
+  margin-bottom: 20px;
+  font-weight: Bold;
+  font-size: 14px;
+  text-transform: uppercase !important;
+  text-align: left;
+}
+
+.stroke {
+  position: relative;
+  right: 50px;
+  flex:1;
+}
+
+.stat-circleo {
+  z-index: 2;
+  content: "";
+  display: inline-block;
+  width: 440px;
+  height: 440px;
+  background-color: #fff;
+  border-radius: 100%;
+  border: 50px solid #080738;
+  position: absolute;
+}
+
+.stat-circles {
+  z-index: 1;
+  content: "";
+  display: inline-block;
+  width: 300px;
+  height: 300px;
+  background-color: #36d4ff;
+  border-radius: 100%;
+  border: 0px solid #36d4ff;
+  position: absolute;
+}
+
+.stat-circlet {
+  z-index: -1;
+  content: "";
+  display: inline-block;
+  width: 330px;
+  height: 330px;
+  /* background-color: #fff; */
+  border-radius: 100%;
+  border: 18px solid #7500ff;
+  position: absolute;
+}
+
+figure {
+  font-weight: bold;
+}
+
+.cardimg {
+  background-image: linear-gradient(rgba(11, 29, 92, 0.82), rgba(18, 24, 97, 0.6)), url("/static/images/background4.jpg");
+  background-size: cover;
+  background-position: top;
+  min-width: 90px;
+  /* opacity:0.4; */
+  min-height: 90px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  flex: 1;
+}
+
+.blogimg {
+  background-image: linear-gradient(rgba(11, 29, 92, 0.82), rgba(18, 24, 97, 0.6)), url("/static/images/register.jpg");
+  width: 100%;
+  /* opacity:0.4; */
+  min-height: 400px;
+  border-top-left-radius: 7px;
+  flex:1;
+}
+
+.blogimg>p {
+  position: absolute;
+  left: 30px;
+  top: 40%;
+}
+
+.blogimg>span {
+  position: absolute;
+  left: 30px;
+  top: 50%;
+}
+
+@media only screen and (max-width: 800px) {
+    .stroke {
+      display: none;
+      visibility: hidden;
+    }
 }
