--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -29,5 +29,8 @@
 <script src="{% static 'js/owl.carousel.min.js' %}"></script>
 <script src="{% static 'js/angular-owl-carousel-2.js' %}"></script>
 <script src="{% static 'js/app.homepage.js' %}"></script>
+<script src="{% static 'js/datetimepicker.js' %}"></script>
+<script src="{% static 'js/angular-flash.js' %}"></script>
+
 
 {% endblock %}
