--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -10,7 +10,7 @@
 
 {% verbatim %}
 <div class="marketing col-md-12 ">
-  <div class="col-md-5 text-center" style="margin-top:10%;margin-bottom:10%">
+  <div class="col-md-5 col-sm-12 text-center" style="margin-top:10%;margin-bottom:10%">
     <div class="content">
       <h3>True digital innovation starts with your employees and teams</h3>
       <p>They’re the people most passionate about your brand, campaigns and products.
@@ -23,75 +23,73 @@
   <div class="col-sm-1" style="width:76px;">
     <span class="point-text" style="margin-left:50px;">Ideate</span>
     <div class="scroll-point point-1" style="margin-top:-22px;"></div>
-    <div class="row noPadding stroke" style="border-right: 2px solid #65647c;height:200px;"></div>
-    <div class="row noPadding curve" style="margin-left: -7px;">
+    <div class="row noPadding stroke" style="border-right: 2px solid #65647c;height:200px;" id="stroke"></div>
+    <div class="row noPadding curve" style="margin-left: -7px;" id="stroke">
       <img src="/static/images/Stroke.svg" alt="">
     </div>
-    <div class="row noPadding stroke" style="border-right: 2px solid #65647c;height:200px;"></div>
+    <div class="row noPadding stroke" style="border-right: 2px solid #65647c;height:200px;" id="stroke"></div>
     <div class="scroll-point point-2" style="margin-top:22px;"></div>
     <span class="point-text" style="margin-left:50px;margin-top:50px;">Experiment</span>
   </div>
 
+  <div class="col-md-6 col-sm-12">
+    <ul class="list-unstyled">
+      <li>
+        <div class="col-md-12 col-sm-12" style="margin-top:40px;" id="container">
+          <div class="col-md-2 col-sm-2" style="margin-top:25px;">
+            <span class="point-green"></span>
+            <img class="img-circle pull-right" width="90px" src="https://res.cloudinary.com/dy8i0qezub/image/fetch/f_auto/https://images.ctfassets.net/zw48pl1isxmc/4lIxw6tMc8m80iAUsUEEWy/6d931e81bcb1fdd47a5bf6c87d10e34a/role-mkt-1.jpg" alt="">
+          </div>
+          <div class="col-md- col-sm-8">
+            <div class="media-body">
+              <h5 class="text-uppercase">PRODUCT MANAGER</h5>
+              <blockquote>
+                <h6>How can we lower mobile cart abandonment?</h6>
+                <p>What if we try push notification reminders?</p>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="col-md-12 col-sm-12" style="margin-left:90px;margin-top:60px;" id="container">
+          <div class="col-md-2 col-sm-2" style="margin-top:25px;">
+            <img class="img-circle pull-right" width="90px" src="https://res.cloudinary.com/dy8i0qezub/image/fetch/f_auto/https://images.ctfassets.net/zw48pl1isxmc/1IrhRRmzKsoY6oU8co8SYW/2b3272d0fa15c464a33f5ff2fc5535fb/role-mkt-2.jpg" alt="">
+          </div>
+          <div class="col-md-8 col-sm-8">
+            <div class="media-body">
+              <h5 class="text-uppercase">Customer Success Manager</h5>
+              <blockquote>
+                <h6>How do we drive larger basket size on Black Friday?</h6>
+                <p>Let's show promotions for related deals and products</p>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="col-md-12 col-sm-12" style="margin-top:60px;" id="container">
+          <div class="col-md-2 col-sm-2" style="margin-top:25px;">
+            <img class="img-circle pull-right" width="90px" src="https://res.cloudinary.com/dy8i0qezub/image/fetch/f_auto/https://images.ctfassets.net/zw48pl1isxmc/qU5pQ44MxwuGKG84USqui/d5cd6e616c5fab97ba243b046046abb6/role-mkt-3.jpg" alt="">
+          </div>
+          <div class="col-md-8 col-sm-8>
+            <div class="media-body">
+              <h5 class="text-uppercase">VP of Marketing</h5>
+              <blockquote>
+                <h6>How can I increase new customer sign-ups?</h6>
+                <p>How about we show viewers some personalized messaging and content?</p>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
 
-  <div class="col-md-6" style="min-height:100px;">
-    <div class="col-md-12">
-      <ul class="roles list-unstyled">
-        <li>
-          <div class="col-md-12" style="margin-top:40px;">
-            <div class="col-md-2" style="margin-top:25px;">
-              <span class="point-green"></span>
-              <img class="img-circle pull-right" width="90px" src="https://res.cloudinary.com/dy8i0qezub/image/fetch/f_auto/https://images.ctfassets.net/zw48pl1isxmc/4lIxw6tMc8m80iAUsUEEWy/6d931e81bcb1fdd47a5bf6c87d10e34a/role-mkt-1.jpg" alt="">
-            </div>
-            <div class="col-md-8">
-              <div class="media-body">
-                <h5 class="text-uppercase">PRODUCT MANAGER</h5>
-                <blockquote>
-                  <h6>How can we lower mobile cart abandonment?</h6>
-                  <p>What if we try push notification reminders?</p>
-                </blockquote>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="col-md-12" style="margin-left:90px;margin-top:60px;">
-            <div class="col-md-2" style="margin-top:25px;">
-              <img class="img-circle pull-right" width="90px" src="https://res.cloudinary.com/dy8i0qezub/image/fetch/f_auto/https://images.ctfassets.net/zw48pl1isxmc/1IrhRRmzKsoY6oU8co8SYW/2b3272d0fa15c464a33f5ff2fc5535fb/role-mkt-2.jpg" alt="">
-            </div>
-            <div class="col-md-8">
-              <div class="media-body">
-                <h5 class="text-uppercase">Customer Success Manager</h5>
-                <blockquote>
-                  <h6>How do we drive larger basket size on Black Friday?</h6>
-                  <p>Let's show promotions for related deals and products</p>
-                </blockquote>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="col-md-12" style="margin-top:60px;">
-            <div class="col-md-2" style="margin-top:25px;">
-              <img class="img-circle pull-right" width="90px" src="https://res.cloudinary.com/dy8i0qezub/image/fetch/f_auto/https://images.ctfassets.net/zw48pl1isxmc/qU5pQ44MxwuGKG84USqui/d5cd6e616c5fab97ba243b046046abb6/role-mkt-3.jpg" alt="">
-            </div>
-            <div class="col-md-8">
-              <div class="media-body">
-                <h5 class="text-uppercase">VP of Marketing</h5>
-                <blockquote>
-                  <h6>How can I increase new customer sign-ups?</h6>
-                  <p>How about we show viewers some personalized messaging and content?</p>
-                </blockquote>
-              </div>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
   </div>
 </div>
-
-<div class="col-md-5 text-center">
-  <div class="row">
+</div>
+<div class="col-md-12">
+  <div class="col-md-5 col-sm-12 text-center">
     <ul class="list-inline">
       <li>
         <div class="stat-circleo row" style="color:#080738;">
@@ -124,17 +122,14 @@
       </li>
     </ul>
   </div>
-</div>
-<div class="col-sm-1" style="width:76px;margin-top:-80px;">
-  <div class="row noPadding" style="margin-left: -1px;">
-    <img src="https://images.ctfassets.net/zw48pl1isxmc/32U70oRSM8MWEWcEEyg6uS/2fd45782ccbbdd906e2f07d73ff8618e/curvy-2.svg" width:"100%"alt="">
+  <div class="col-md-1 col-sm-12" style="width:76px;margin-top:-80px;">
+    <div class="row noPadding" style="margin-left: -2px;" id="stroke">
+      <img src="https://images.ctfassets.net/zw48pl1isxmc/32U70oRSM8MWEWcEEyg6uS/2fd45782ccbbdd906e2f07d73ff8618e/curvy-2.svg" width:"100%"alt="">
+    </div>
+    <div class="scroll-point point-3" style="margin-left:29px;margin-top:22px;"></div>
+    <span class="point-text" style="margin-left:70px;">Repeat</span>
   </div>
-  <div class="scroll-point point-3" style="margin-left:29px;margin-top:22px;"></div>
-  <span class="point-text" style="margin-left:70px;">Repeat</span>
-</div>
-
-<div class="col-md-6" style="margin-top:30px;">
-  <div class="col-md-12">
+  <div class="col-md-6 col-sm-12" style="margin-top:30px;">
     <div class="text-center" style="margin-left:150px;">
       <div class="content">
         <h3>Let the data determine your baseline, your winning ideas and the losers</h3>
@@ -146,8 +141,6 @@
     </div>
   </div>
 </div>
-
-
 <div class="row" style="margin:0px;">
   <div class="col-md-8 col-md-offset-2">
     <div class="col-md-12">
@@ -163,9 +156,7 @@
     </div>
   </div>
 </div>
-
 <div class="row" style="margin:0px;margin-bottom:20px;">
-
   <div class="col-md-8 col-md-offset-2 shaddowed noPadding" style="min-height:550px;border-radius:10px;">
     <div class="col-md-6 noPadding">
       <div class="noPadding blogimg">
@@ -202,7 +193,6 @@
     </div>
   </div>
 </div>
-
 <div class="row" style="margin:0px;padding:20px;background: url('/static/images/footer-bg-v1.png') ;color:white;">
   <div class="col-md-5 text-right">
     <h4>Get Regular Blog Updates</h4>
@@ -216,9 +206,7 @@
     </div>
   </div>
 </div>
-
 <div class="row" style="margin:0px;min-height:100vh;">
-
 </div>
 
 {% endverbatim %}
