--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -206,83 +206,61 @@
   </div>
 </div>
 
-<div class="row" style="min-height:100vh;">
-  <div id="" class="" style="">
-    <section class="Benefits">
+<div class="row" style="min-height:100vh;margin:0px;">
 
   <div class="Benefits-items">
 
     <h2 class="Benefits-title"><span>Why you’ll love the UiPath Enterprise RPA Platform</span></h2>
 
-
     <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
       <div class="Benefits-itemHeader">
         <figure class="Benefits-itemIcon">
-
           <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/ecosystem.svg" alt="Open Platform">
-
         </figure>
       </div>
       <h3 class="Benefits-itemTitle">Open Platform</h3>
       <p class="Benefits-itemDesc"><span>Our open and extensible platform features hundreds of built-in, customizable, shareable activities, and deep integrations with ERP, BPM and AI technologies.</span></p>
     </div>
-
     <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
       <div class="Benefits-itemHeader">
         <figure class="Benefits-itemIcon">
-
           <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/fast-roi.svg" alt="Rapid Results">
-
         </figure>
       </div>
       <h3 class="Benefits-itemTitle">Rapid Results</h3>
       <p class="Benefits-itemDesc"><span>Tested and proven to deliver 40%+ faster automation design and deployment than competitors, UiPath offers worldwide implementation support, certified training, and a vast network of partner integrators.</span></p>
     </div>
-
     <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
       <div class="Benefits-itemHeader">
         <figure class="Benefits-itemIcon">
-
           <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/ai-enabled.svg" alt="Path to AI">
-
         </figure>
       </div>
       <h3 class="Benefits-itemTitle">Path to AI</h3>
       <p class="Benefits-itemDesc"><span style="font-weight: 400;">Built-in intelligent OCR, integrated NLP services from Google, Watson and Microsoft, and deep learning to reduce maintenance.</span></p>
     </div>
-
     <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
       <div class="Benefits-itemHeader">
         <figure class="Benefits-itemIcon">
-
           <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/flexibility.svg" alt="Scalability">
-
         </figure>
       </div>
       <h3 class="Benefits-itemTitle">Scalability</h3>
       <p class="Benefits-itemDesc"><span style="font-weight: 400;">Deploy RPA at enterprise scale. Manage any variety and any number of processes from front to back-office regardless of complexity.</span></p>
     </div>
-
     <div class="Benefits-item shaddowed col-md-3" style="margin:20px;height:30vh">
       <div class="Benefits-itemHeader">
         <figure class="Benefits-itemIcon">
-
           <img src="https://www.uipath.com/hubfs/Valentin/images/icons/new%20icons/security.svg" alt="Security">
-
         </figure>
       </div>
       <h3 class="Benefits-itemTitle">Security</h3>
       <p class="Benefits-itemDesc"><span style="font-weight: 400;">Defense-grade security and auditing includes RBAC, encryption everywhere, and Veracode certified Code. Our technology is trusted as secure by 40+ government agencies.</span></p>
     </div>
-
-
   </div>
-
-</section>
-</div>
 </div>
 
-<div class="row above-footer text-center noPadding"style="height:50vh;position:relative">
+<div class="row above-footer text-center noPadding"style="height:50vh;position:relative;margin:0px;">
   <div class=""style="position:absolute;top:30%;left:40%">
     <div class="row">
       <h1> <strong>Ready to take the lead?</strong></h1>
